force-app/main/default/objects/Survey_Answer_Option__c/Survey_Answer_Option__c.object-meta.xml
<CustomObject>
    <label>Survey Answer Option</label>
    <pluralLabel>Survey Answer Options</pluralLabel>
    <description>Master-detail child of Survey_Question__c. One row per selectable option. Image_Url__c renders next to the option label on the consumer site.</description>
    <nameField>
        <label>Option Number</label>
        <type>AutoNumber</type>
        <displayFormat>OPT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>