force-app/main/default/objects/Survey_Answer_Option__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Only active options render on the consumer site.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>