force-app/main/default/objects/Survey_Answer_Option__c/fields/Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Image_Url__c</fullName>
    <label>Image URL</label>
    <description>HTTPS URL of an image rendered alongside the option label on the consumer site.</description>
    <type>Url</type>
</CustomField>