force-app/main/default/objects/Survey_Answer_Option__c/fields/Option_Key__c.field-meta.xml
<CustomField>
    <fullName>Option_Key__c</fullName>
    <label>Option Key</label>
    <description>Stable identifier sent as the answerKey, e.g. tyo. Lowercase recommended. Must be unique within a question.</description>
    <type>Text</type>
    <length>64</length>
    <required>true</required>
</CustomField>