force-app/main/default/objects/Survey_Answer_Option__c/fields/Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Option_Text__c</fullName>
    <label>Option Text</label>
    <description>Visible label on the consumer site, e.g. "Tokyo".</description>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>