force-app/main/default/objects/Survey_Answer_Option__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <description>Sequence within the parent question. Lower = earlier.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>