force-app/main/default/objects/Survey_Answer_Option__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <label>Survey Question</label>
    <description>Parent question this option belongs to. Master-detail.</description>
    <type>MasterDetail</type>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <relationshipLabel>Options</relationshipLabel>
</CustomField>